--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,8 +13,22 @@
        <%= render @post.comments %>
      </div>
      <% if current_user %>
-      <%= render 'comments/form', comment: Comment.new, post: @post %>
-     <% end %>
+      <% @topic.posts.each do |post| %>
+ <div class="media">
+   <div class="media-body">
+     <h4 class="media-heading">
+       <%= link_to post.title, topic_post_path(@topic, post) %>
+     </h4>
+
+     <small>
+       submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
+       <%= post.comments.count %> Comments
+     </small>
+
+   </div>
+ </div>
+ <%end%>
+<% end %>
    </div>
   <% if user_is_authorized_for_post?(@post) %>
    <div class="col-md-4">
