--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,6 +12,10 @@
        <br />
        <%= @topic.description %>
      </p>
+      <%= render @topic.comments %>
+      <% if current_user %>
+      <%= render 'comments/form', comment: Comment.new, topic: @topic %>
+     <% end %>
      <% @topic.posts.each do |post| %>
        <div class="media">
          <div class="media-body">
