--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,14 @@
 <div class="media">
    <div class="media-body">
+
+   	<% if comment.post %>
      <small>
        <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
        <% if user_is_authorized_for_comment?(comment) %>
          | <%= link_to "Delete", [@post, comment], method: :delete %>
        <% end %>
      </small>
+    <% else %>
      <p><%= comment.body %></p>
    </div>
  </div>
