--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,14 @@
    </div>
  </div>
  
- <h2>Posts</h2>
- <%= render @user.posts %>
- 
- <h2>Comments</h2>
- <%= render @user.comments %>
+ <% if any_posts?(@user) %>
+  <h2>Posts</h2>
+    <%= render @user.posts %>
+  <h2>Comments</h2>
+    <%= render @user.comments %>
+ <% else %>
+  <h2> <%= "#{@user.name} has not submitted any posts yet."%> </h2>
+ <% end %>
+
+<h2>Favorites</h2>
+  <%= render partial: 'users/favorite' %>
