--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
            <%= link_to "Sign Up", new_user_path %>
          <% end %>
      </div>
-
+    <div class="flash">
      <% if flash[:notice] %>
        <div class="alert alert-success">
          <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -44,6 +44,7 @@
          <%= flash[:alert] %>
        </div>
      <% end %>
+    </div>
 
      <%= yield %>
    </div>
